outlook disaster__on fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       table,
       tr,
       td {
-        border: 1px solid black;
+        /* border: 1px solid black; */
       }
       img {
         border: 1px solid black;
@@ -68,7 +68,7 @@
   </head>
   <body style="padding: 0; margin: 0">
     <table
-      class="table_parent"
+      class="table_king"
       cellpadding="0"
       cellspacing="0"
       role="presentation"
@@ -83,7 +83,7 @@
       <tr>
         <td align="center" style="padding: 0">
           <table
-            class="table_parent"
+            class="table_queen"
             cellpadding="0"
             cellspacing="0"
             role="presentation"
@@ -121,7 +121,7 @@
                           alt="Ford Logo"
                           class="logo"
                           width="150px"
-                          style="display: block; width: 150px"
+                          style="display: block; width: 120px"
                         />
                       </a>
                     </td>
@@ -685,6 +685,7 @@
               </td>
             </tr>
             <!-- Explore Further -->
+
             <tr>
               <td align="center" style="padding: 0">
                 <h1 style="margin: 0; padding: 0">Explore Further</h1>
