outlook disaster_96%done

--- a/index2 copy 2.html
+++ b/index2 copy 2.html
@@ -218,7 +218,9 @@
         .btn__element-container__text {
           vertical-align: middle !important;
         }
-
+        .btn__service-text {
+          vertical-align: middle !important;
+        }
         .footer__text {
           font-size: 14px !important;
           width: 552px;
@@ -841,59 +843,18 @@
                                               "
                                               style="padding: 0"
                                             >
-                                              <table
-                                                class="table_parent"
-                                                cellpadding="0"
-                                                cellspacing="0"
-                                                role="presentation"
-                                                style="
-                                                  width: 100%;
-                                                  border-collapse: collapse;
-                                                  border: 0;
-                                                  border-spacing: 0;
-                                                "
+                                              <a
+                                                target="_blank"
+                                                href="#"
+                                                rel="noopener noreferrer"
                                               >
-                                                <!--[if mso]>
-                                                  <tr>
-                                                    <td style="padding: 0">
-                                                      &nbsp;
-                                                    </td>
-                                                  </tr>
-                                                <![endif]-->
-
-                                                <tr>
-                                                  <td
-                                                    align="center"
-                                                    style="padding: 0"
-                                                  >
-                                                    <a
-                                                      target="_blank"
-                                                      href="#"
-                                                      rel="noopener noreferrer"
-                                                    >
-                                                      <p
-                                                        class="
-                                                          btn__service-text
-                                                        "
-                                                        style="
-                                                          margin: 0;
-                                                          padding: 0;
-                                                        "
-                                                      >
-                                                        BUILD & PRICE
-                                                      </p>
-                                                    </a>
-                                                  </td>
-                                                </tr>
-
-                                                <!--[if mso]>
-                                                  <tr>
-                                                    <td style="padding: 0">
-                                                      &nbsp;
-                                                    </td>
-                                                  </tr>
-                                                <![endif]-->
-                                              </table>
+                                                <p
+                                                  class="btn__service-text"
+                                                  style="margin: 0; padding: 0"
+                                                >
+                                                  BUILD & PRICE
+                                                </p>
+                                              </a>
                                             </td>
 
                                             <td
